--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="block">
         <div class="header__wrap">
-          <div class="logo"><img src="/img/LoremIpsum.Net.svg" alt="logo" /></div>
+          <div class="logo"><img src="./img/LoremIpsum.Net.svg" alt="logo" /></div>
           <ul class="header__menu">
             <li class="header__menu-item header__menu-item--active"><a href="#">Бизнес</a></li>
             <li class="header__menu-item"><a href="#">О нас</a></li>
@@ -59,23 +59,23 @@
           </div>
           <div class="work-scheme order__work-scheme">
             <div class="work-scheme__item">
-              <div class="work-scheme__img"><img src="/img/search.svg" alt="search"></div>
+              <div class="work-scheme__img"><img src="./img/search.svg" alt="search"></div>
               <p class="work-scheme__text">Lorem ipsum dolor sit amet</p>
             </div>
             <div class="work-scheme__item">
-              <div class="work-scheme__img"><img src="/img/percent.svg" alt="percent"></div>
+              <div class="work-scheme__img"><img src="./img/percent.svg" alt="percent"></div>
               <p class="work-scheme__text">Lorem ipsum dolor sit amet</p>
             </div>
             <div class="work-scheme__item">
-              <div class="work-scheme__img"><img src="/img/plusdoc.svg" alt="plusdoc"></div>
+              <div class="work-scheme__img"><img src="./img/plusdoc.svg" alt="plusdoc"></div>
               <p class="work-scheme__text">Lorem ipsum dolor sit amet</p>
             </div>
             <div class="work-scheme__item">
-              <div class="work-scheme__img"><img src="/img/message.svg" alt="message"></div>
+              <div class="work-scheme__img"><img src="./img/message.svg" alt="message"></div>
               <p class="work-scheme__text">Lorem ipsum dolor sit amet</p>
             </div>
             <div class="work-scheme__item">
-              <div class="work-scheme__img"><img src="/img/money.svg" alt="money"></div>
+              <div class="work-scheme__img"><img src="./img/money.svg" alt="money"></div>
               <p class="work-scheme__text">Lorem ipsum dolor sit amet</p>
             </div>
           </div>
@@ -108,7 +108,7 @@
             </label>
             <label class="input-file" for="input-file">
               <input class="input-file__input" type="file" name="file" id="input-file" />
-              <img src="/img/file.svg" alt="file">
+              <img src="./img/file.svg" alt="file">
               <span>Прикрепить файл</span>
             </label>
             <input class="button order__submit" type="submit" value="Отправить" class="button" />
@@ -123,32 +123,32 @@
           <p class="footer__rights">© 2018 «LoremIpsum.net» Все права защищены.</p>
           <div class="footer__payment">
             <div class="footer__item">
-              <img src="/img/qiwi.svg" alt="qiwi" class="footer__payment-img" />
+              <img src="./img/qiwi.svg" alt="qiwi" class="footer__payment-img" />
               <p>Qiwi wallet</p>
             </div>
             <div class="footer__item">
-              <img src="/img/yandexM.svg" alt="yandexM" class="footer__payment-img" />
+              <img src="./img/yandexM.svg" alt="yandexM" class="footer__payment-img" />
               <p>Yandex Money</p>
             </div>
             <div class="footer__item">
-              <img src="/img/webM.svg" alt="webM" class="footer__payment-img" />
+              <img src="./img/webM.svg" alt="webM" class="footer__payment-img" />
               <p>Web Money</p>
             </div>
           </div>
 
           <div class="footer__social">
             <a href="#" class="footer__item">
-              <img src="/img/mail.svg" alt="mail" class="footer__social-img" />
+              <img src="./img/mail.svg" alt="mail" class="footer__social-img" />
               <p>info@ipsum228.com</p>
             </a>
             <a href="#" class="footer__item">
-              <img src="/img/vk.svg" alt="vk" class="footer__social-img" />
+              <img src="./img/vk.svg" alt="vk" class="footer__social-img" />
               <p>Мы вконтакте</p>
             </a>
           </div>
         </div>
       </div>
     </footer>
-    <script src="/dist/index.js"></script>
+    <script src="./dist/index.js"></script>
   </body>
 </html>
