filetext and scss directory change

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 <li><label for="5">Itaque earum rerum</label></li>
               </ul>
             </details>
-            <input type="text" name="email" class="input" placeholder="Ваш e-mail" />
-            <input type="text" name="username" class="input" placeholder="Ваше имя" />
+            <input type="text" required name="email" class="input" placeholder="Ваш e-mail" />
+            <input type="text" required name="username" class="input" placeholder="Ваше имя" />
             <label class="inputRange" for="inputRange"> 
               <span>Sed ut perspiciatis, unde omnis iste natus</span>
               <output class="inputRange__output" name="result" for="inputRange">75%</output>
